--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
+absl-py==1.4.0
 anyio==3.7.0
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+astunparse==1.6.3
 attrs==23.1.0
 backcall==0.2.0
 beautifulsoup4==4.12.2
 bleach==6.0.0
+cachetools==5.3.1
+certifi==2023.5.7
 cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
 colorama==0.4.6
+Cython==0.29.28
 debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
@@ -14,7 +21,18 @@ entrypoints==0.4
 exceptiongroup==1.1.1
 Faker==18.9.0
 fastjsonschema==2.17.1
+filelock==3.12.1
+flatbuffers==23.5.26
+fsspec==2023.1.0
+gast==0.4.0
 gender-guesser==0.4.0
+gensim==4.2.0
+google-auth==2.19.1
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.54.2
+h5py==3.8.0
+huggingface-hub==0.15.1
 idna==3.4
 importlib-metadata==6.6.0
 importlib-resources==5.12.0
@@ -24,6 +42,7 @@ ipython-genutils==0.2.0
 ipywidgets==8.0.6
 jedi==0.18.2
 Jinja2==3.1.2
+joblib==1.2.0
 jsonschema==4.17.3
 jupyter==1.0.0
 jupyter-console==6.6.3
@@ -32,6 +51,9 @@ jupyter_client==7.4.9
 jupyter_core==4.12.0
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.7
+keras==2.11.0
+libclang==16.0.0
+Markdown==3.4.3
 MarkupSafe==2.1.3
 matplotlib-inline==0.1.6
 mistune==2.0.5
@@ -40,9 +62,12 @@ nbclient==0.7.4
 nbconvert==7.4.0
 nbformat==5.8.0
 nest-asyncio==1.5.6
+nltk==3.8.1
 notebook==6.5.4
 notebook_shim==0.2.3
 numpy==1.21.6
+oauthlib==3.2.2
+opt-einsum==3.3.0
 packaging==23.1
 pandas==1.1.5
 pandocfilters==1.5.0
@@ -51,7 +76,10 @@ pickleshare==0.7.5
 pkgutil_resolve_name==1.3.10
 prometheus-client==0.17.0
 prompt-toolkit==3.0.38
+protobuf==3.19.6
 psutil==5.9.5
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pycparser==2.21
 Pygments==2.15.1
 pyrsistent==0.19.3
@@ -59,20 +87,43 @@ python-dateutil==2.8.2
 pytz==2023.3
 pywin32==306
 pywinpty==2.0.10
+PyYAML==6.0
 pyzmq==25.1.0
 qtconsole==5.4.3
 QtPy==2.3.1
+regex==2023.6.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
+safetensors==0.3.1
+scipy==1.7.3
 Send2Trash==1.8.2
 six==1.16.0
+smart-open==6.3.0
 sniffio==1.3.0
 soupsieve==2.4.1
+tensorboard==2.11.2
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.11.0
+tensorflow-estimator==2.11.0
+tensorflow-intel==2.11.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
 terminado==0.17.1
+textblob==0.17.1
 tinycss2==1.2.1
+tokenizers==0.13.3
 tornado==6.2
+tqdm==4.65.0
 traitlets==5.9.0
+transformers==4.30.1
 typing_extensions==4.6.2
+urllib3==1.26.16
 wcwidth==0.2.6
 webencodings==0.5.1
 websocket-client==1.5.3
+Werkzeug==2.2.3
 widgetsnbextension==4.0.7
+wrapt==1.12.1
 zipp==3.15.0
